--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <h1>KFC-NEW</h1>
 
-    
+    <select name="" id="familias"></select>
 
+    <script src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
