--- a/index.html
+++ b/index.html
@@ -7,12 +7,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>KFC-NEW</h1>
 
-    <select name="" id="familias"></select>
+    <div class="d-flex align-items-center justify-content-around">
+        <form id="formulario" action="">
+          <img src="https://flagcdn.com/es.svg" width="45" alt="español" />
+          <img src="https://flagcdn.com/gb.svg" width="45" alt="ingles" />
+          <img src="https://flagcdn.com/de.svg" width="45" alt="aleman" />
+        </form>
+        <h1 id="titulo" class="mx-5">Listado de productos KFC</h1>
+      </div>
+      <select name="" id="familias"></select>
+      <div id="productos"></div>
+      <div id="listado" class="d-flex flex-wrap justify-content-center"></div>
+      <nav aria-label="Page navigation example" class="d-flex align-items-center justify-content-center my-2">
+        <ul class="pagination justify-content-center">
+          <!-- Selector de pagina anterior -->
+          <li id="liAnterior" class="page-item disabled">
+            <a id="anterior" class="page-link" href="#" tabindex="-1">Anterior</a>
+          </li>
+          <!-- Grupo de paginas -->
+          <div id="paginas" class="d-flex flex-wrap"></div>
+          <!-- Selector de pagina siguiente -->
+          <li id="liSiguiente" class="page-item">
+            <a id="siguiente" class="page-link naranja" href="#">Siguiente</a>
+          </li>
+        </ul>
+      </nav>
 
     <script src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
